# bootc

crates/initramfs/: Cargo.toml
crates/initramfs/src/: lib.rs
crates/lib/src/bootc_composefs/: boot.rs  rollback.rs  service.rs  state.rs  status.rs
