[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "bootc-initramfs-setup"
publish = false
version = "0.1.0"

[dependencies]
anyhow.workspace = true
clap = {workspace = true, features = ["std", "help", "usage", "derive"]}
composefs-boot.workspace = true
composefs.workspace = true
fn-error-context.workspace = true
rustix.workspace = true
serde = {workspace = true, features = ["derive"]}
toml.workspace = true
tracing = {workspace = true}

[lints]
workspace = true

[features]
default = ['pre-6.15']
'pre-6.15' = ['composefs/pre-6.15']
rhel9 = ['composefs/rhel9']
